--- a/Js_PRATICE/Project_5(Guss_The_Number)/index.html
+++ b/Js_PRATICE/Project_5(Guss_The_Number)/index.html
@@ -3,36 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        .container {
-  width: 500px;
-  height: 250px;
-  margin: 50px;
-  outline: solid 1px black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
-  margin-top: 200px;
-}
-
-.inner {
-  width: 1000px;
-  height: 150px;
-  
-}
-    </style>
+    <title>Guess The Number</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
-    <div class="container">
-
-        <div class="inner">
-                <h1 id="ans">Guess the correct one</h1>
-                <button id="start" onclick="gameSt()">Start the game</button>
+<body class="bg-secondary">
+    <div class="container mt-4">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-4">
+                  <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">Easy</h5>
+                      <p class="card-text">You have to Guess a number between 0 to 10</p>
+                      <a href="leveleasy.html" class="btn btn-primary">Easy</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card">
+                      <div class="card-body">
+                        <h5 class="card-title">Medium</h5>
+                        <p class="card-text">You have to Guess a number between 0 to 100</p>
+                        <a href="levelmedium.html" class="btn btn-primary" onclick="medium()">Medium</a>
+                      </div>
+                    </div>
+                  </div>
+                <div class="col-sm-4">
+                  <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">Hard</h5>
+                      <p class="card-text">You have to Guess a number between 0 to 1000</p>
+                      <a href="levelhard.html" class="btn btn-primary"  onclick="hard()">Hard</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </div>       
         </div>
-  
   </div>
-    <script src="index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
