--- a/Js_PRATICE/Project_5(Guss_The_Number)/levelmedium.html
+++ b/Js_PRATICE/Project_5(Guss_The_Number)/levelmedium.html
@@ -16,8 +16,11 @@
             <div class="card-body">
               <h1 id="ans">Guess the correct one</h1>
             </div>
+            <div class="card-body">
+                <button id="start" onclick="medium()" class="btn btn-primary">Start the game</button>
+            </div>
             <div class="card-footer text-muted">
-              <button id="start" onclick="medium()" class="btn btn-primary">Start the game</button>
+              <button id="start" onclick="gameSt()" class="btn btn-primary">Guess</button>
               <a href="index.html" class="btn btn-primary">Back</a>
             </div>
           </div>       
