--- a/Js_PRATICE/Project_5(Guss_The_Number)/index.html
+++ b/Js_PRATICE/Project_5(Guss_The_Number)/index.html
@@ -10,7 +10,7 @@
     <div class="container mt-4">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-4 mt-2">
                   <div class="card">
                     <div class="card-body">
                       <h5 class="card-title">Easy</h5>
@@ -19,7 +19,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 mt-2">
                     <div class="card">
                       <div class="card-body">
                         <h5 class="card-title">Medium</h5>
@@ -28,7 +28,7 @@
                       </div>
                     </div>
                   </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4 mt-2">
                   <div class="card">
                     <div class="card-body">
                       <h5 class="card-title">Hard</h5>
