--- a/Js_PRATICE/Project_8_Snake-Water-Gun/index.html
+++ b/Js_PRATICE/Project_8_Snake-Water-Gun/index.html
@@ -3,14 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Snake - Water - Gun</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="result"></div>
-    <button value="Snake" id="snake" onclick="snake()">Snake</button>
-    <button value="Water" id="water" onclick="water()">Water</button>
-    <button value="Gun" id="gun" onclick="gun()">Gun</button>
+    <div class="container">
+     <div class="container-fluid">  
+         <div class="card">
+            <div class="card-header text-center">
+                <h1 id="result"></h1>
+            </div>
+            <div class="card-body">
+     <div class="row">
+        <div class="col-sm-4">
+            <div class="card text-center" style="width: 18rem;">
+                <button value="Snake" id="snake" onclick="snake()"><img src="img/snake.png" alt=""></button>
+             </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="card" style="width: 18rem;">
+                <button value="Water" id="water" onclick="water()"><img src="img/water.png" alt=""></button>
+             </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="card" style="width: 18rem;">
+                <button value="Gun" id="gun" onclick="gun()"><img src="img/gun.png" alt=""></button>
+             </div>
+        </div>
+      </div>
+    </div>
+</div>
+     </div>
+    </div>
 
     <script src="index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
