--- a/Js_PRATICE/Project_8_Snake-Water-Gun/index.html
+++ b/Js_PRATICE/Project_8_Snake-Water-Gun/index.html
@@ -12,6 +12,7 @@
      <div class="container-fluid">  
          <div class="card">
             <div class="card-header text-center">
+                <h1 id="img"></h1>
                 <h1 id="result"></h1>
             </div>
             <div class="card-body">
