--- a/Js_PRATICE/Project_8_Snake-Water-Gun/index.html
+++ b/Js_PRATICE/Project_8_Snake-Water-Gun/index.html
@@ -36,7 +36,7 @@
     </div>
 </div>
      </div>
-     <button type="button" class="btn btn-primary" src="https://github.com/hellojeeban/Partice_JavaScpript/tree/main/Js_PRATICE/Project_8_Snake-Water-Gun">Github</button>
+     <a type="button" class="btn btn-primary" src="https://github.com/hellojeeban/Partice_JavaScpript/tree/main/Js_PRATICE/Project_8_Snake-Water-Gun">Github</a>
     </div>
 
     <script src="index.js"></script>
