--- a/Js_PRATICE/Project_8_Snake-Water-Gun/index.html
+++ b/Js_PRATICE/Project_8_Snake-Water-Gun/index.html
@@ -35,8 +35,8 @@
       </div>
     </div>
 </div>
+<a type="button" class="btn btn-primary" href="https://github.com/hellojeeban/Partice_JavaScpript/tree/main/Js_PRATICE/Project_8_Snake-Water-Gun">Github</a>
      </div>
-     <a type="button" class="btn btn-primary" src="https://github.com/hellojeeban/Partice_JavaScpript/tree/main/Js_PRATICE/Project_8_Snake-Water-Gun">Github</a>
     </div>
 
     <script src="index.js"></script>
