--- a/Js_PRATICE/Project_8_Snake-Water-Gun/index.html
+++ b/Js_PRATICE/Project_8_Snake-Water-Gun/index.html
@@ -12,6 +12,7 @@
      <div class="container-fluid">  
          <div class="card">
             <div class="card-header text-center">
+                <a type="button" class="btn btn-primary" href="https://github.com/hellojeeban/Partice_JavaScpript/tree/main/Js_PRATICE/Project_8_Snake-Water-Gun">View Code Here</a>
                 <h1 id="img"></h1>
                 <h1 id="result"></h1>
             </div>
@@ -35,9 +36,8 @@
       </div>
     </div>
 </div>
-<a type="button" class="btn btn-primary" href="https://github.com/hellojeeban/Partice_JavaScpript/tree/main/Js_PRATICE/Project_8_Snake-Water-Gun">Github</a>
-     </div>
-    </div>
+</div>
+</div>
 
     <script src="index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
