--- a/Js_PRATICE/Project_8_Snake-Water-Gun/index.html
+++ b/Js_PRATICE/Project_8_Snake-Water-Gun/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
      <div class="container-fluid">  
+        <h1>Are you Ready</h1>
          <div class="card">
             <div class="card-header text-center">
                 <a type="button" class="btn btn-primary" href="https://github.com/hellojeeban/Partice_JavaScpript/tree/main/Js_PRATICE/Project_8_Snake-Water-Gun">View Code Here</a>
